Volver a activar los dos idiomas
Cuando volvía a comprobar la web, no reconocía los nombres de dos columnas así que volvía a activar la traducción en inglés y español y añadí al archivo de traduccion los campos que faltaban

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -21,5 +21,7 @@
   "FOOTER_RIGHTS": "All rights reserved",
   "TOWNS": "Towns",
   "DESTINATION": "Destination",
-  "town_name": "Town"
+  "town_name": "Town",
+  "province_name": "Province",
+  "community_name": "Community"
 }
