--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -27,9 +27,21 @@
   "community_name": "Comunidad",
   "NAME": "Nombre",
   "SURNAME": "Apellidos",
-  "EMAIL": "Email",
+  "USER": "Usuaria",
   "PHONENUMBER": "Teléfono",
   "DESCRIPTION": "Descripción",
   "PASSWORDCONFIRM": "Confirmación de contraseña",
-  "HOST": "Anfitriona"
+  "HOST": "Anfitriona",
+  "PROFILE": "Perfil",
+  "AVATAR": "Subir foto de perfil",
+  "ACTIVEHOST": "Disponible",
+  "HOST_DATA": "TUS DATOS DE ANFITRIONA",
+  "HOST_AVAILABLE": "MUÉSTRATE DISPONIBLE PARA LA VIAJERAS",
+  "PROFILE_DATA": "DATOS DEL PERFIL",
+  "CONTACT_DATA": "DATOS DE CONTACTO",
+  "REGISTER_DATA": "DATOS DE REGISTRO",
+  "PROFILE_TAB": "VIAJERA",
+  "HOST_TAB": "ANFITRIONA",
+  "ERROR_PASS":"La contraseña debe tener al menos 8 dígitos, 1 número y un símbolo",
+  "ERROR_MATCH":"Las contraseñas no coinciden"
 }
