--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -43,5 +43,7 @@
   "PROFILE_TAB": "TRAVELER",
   "HOST_TAB": "HOST",
   "ERROR_PASS":"The password must have at least 8 digits, 1 number and a symbol",
-  "ERROR_MATCH":"Not matching passwords"
+  "ERROR_MATCH":"Not matching passwords",
+  "SHORT_DESC": "Define yourself in a few words",
+  "ABOUTME": "ABOUT ME"
 }
