--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -43,5 +43,7 @@
   "PROFILE_TAB": "VIAJERA",
   "HOST_TAB": "ANFITRIONA",
   "ERROR_PASS":"La contraseña debe tener al menos 8 dígitos, 1 número y un símbolo",
-  "ERROR_MATCH":"Las contraseñas no coinciden"
+  "ERROR_MATCH":"Las contraseñas no coinciden",
+  "SHORT_DESC": "Definete en una frase",
+  "ABOUTME": "SOBRE MI"
 }
