--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -45,5 +45,6 @@
   "ERROR_PASS":"La contraseña debe tener al menos 8 dígitos, 1 número y un símbolo",
   "ERROR_MATCH":"Las contraseñas no coinciden",
   "SHORT_DESC": "Definete en una frase",
-  "ABOUTME": "SOBRE MI"
+  "ABOUTME": "SOBRE MI",
+  "Register email": "Email de registro"
 }
