--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -52,5 +52,6 @@
   "REGISTER NOW": "Register Now",
   "Are you not registered yet?" : "Are you not registered yet?",
   "Register email": "Register email",
-  "Confirm password": "Confirm password"
+  "Confirm password": "Confirm password",
+  "ERROR_EMAIL_REQUIRED": "Email required"
 }
