Creada pestaña reservas y añadida tabla provisional

--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -53,5 +53,6 @@
   "Are you not registered yet?": "¿Todavía no estás registrada?",
   "Register email": "Email de registro",
   "Confirm password": "Confirma la contraseña",
-  "ERROR_EMAIL_REQUIRED": "Email requerido"
+  "ERROR_EMAIL_REQUIRED": "Email requerido",
+  "RESERVATION_TAB": "RESERVAS"
 }
