--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -53,5 +53,6 @@
   "Are you not registered yet?" : "Are you not registered yet?",
   "Register email": "Register email",
   "Confirm password": "Confirm password",
-  "ERROR_EMAIL_REQUIRED": "Email required"
+  "ERROR_EMAIL_REQUIRED": "Email required",
+  "RESERVATION_TAB": "RESERVATIONS"
 }
