WIP Botones Intereses
Añadidos chips y desplegable

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -54,5 +54,32 @@
   "Register email": "Register email",
   "Confirm password": "Confirm password",
   "ERROR_EMAIL_REQUIRED": "Email required",
-  "RESERVATION_TAB": "RESERVATIONS"
+  "RESERVATION_TAB": "RESERVATIONS",
+  "SAVE": "Save",
+  "Baile": "Dance",
+  "Senderismo": "Hiking",
+  "Escalada": "Climbing",
+  "Surf": "Surf",
+  "Buceo": "Diving",
+  "Ciclismo": "Cycling",
+  "Pesca": "Fishing",
+  "Yoga": "Yoga",
+  "Pintura": "Painting",
+  "Lectura": "Reading",
+  "Cocina": "Cooking",
+  "Jardinería": "Gardening",
+  "Natación": "Swiming",
+  "Netflix": "Netflix",
+  "Running": "Running",
+  "Teatro": "Theater",
+  "Escritura": "Writing",
+  "Canto": "Singing",
+  "Videojuegos": "Videogames",
+  "Música": "Music",
+  "Fotografía": "Photography",
+  "Fútbol": "Soccer",
+  "Baloncesto": "Basketball",
+  "Astronomía": "Astronomy",
+  "ACTIVITIES": "INTERESTS",
+  "ACTSELECT": "Select your interests"
 }
