--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -54,5 +54,32 @@
   "Register email": "Email de registro",
   "Confirm password": "Confirma la contraseña",
   "ERROR_EMAIL_REQUIRED": "Email requerido",
-  "RESERVATION_TAB": "RESERVAS"
+  "RESERVATION_TAB": "RESERVAS",
+  "SAVE": "Guardar",
+  "Baile": "Baile",
+  "Senderismo": "Senderismo",
+  "Escalada": "Escalada",
+  "Surf": "Surf",
+  "Buceo": "Buceo",
+  "Ciclismo": "Ciclismo",
+  "Pesca": "Pesca",
+  "Yoga": "Yoga",
+  "Pintura": "Pintura",
+  "Lectura": "Lectura",
+  "Cocina": "Cocina",
+  "Jardinería": "Jardinería",
+  "Natación": "Natación",
+  "Netflix": "Netflix",
+  "Running": "Running",
+  "Teatro": "Teatro",
+  "Escritura": "Escritura",
+  "Canto": "Canto",
+  "Videojuegos": "Videojuegos",
+  "Música": "Música",
+  "Fotografía": "Fotografía",
+  "Fútbol": "Fútbol",
+  "Baloncesto": "Baloncesto",
+  "Astronomía": "Astronomía",
+  "ACTIVITIES": "INTERESES",
+  "ACTSELECT": "Selecciona tus intereses"
 }
