--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -81,5 +81,8 @@
   "Baloncesto": "Baloncesto",
   "Astronomía": "Astronomía",
   "ACTIVITIES": "INTERESES",
-  "ACTSELECT": "Selecciona tus intereses"
+  "ACTSELECT": "Selecciona tus intereses",
+  "CONTACT": "Contacta con",
+  "MESSAGE": "MENSAJE",
+  "SEND": "Enviar"
 }
