WIP Filtro actividades en grid hosts

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -84,5 +84,6 @@
   "ACTSELECT": "Select your interests",
   "CONTACT": "Contact",
   "MESSAGE": "MESSAGE",
-  "SEND": "Send"
+  "SEND": "Send",
+  "FILTERS_HOSTS": "Host filters"
 }
