--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -84,5 +84,6 @@
   "ACTSELECT": "Selecciona tus intereses",
   "CONTACT": "Contacta con",
   "MESSAGE": "MENSAJE",
-  "SEND": "Enviar"
+  "SEND": "Enviar",
+  "FILTERS_HOSTS": "Filtros de anfitriona"
 }
