--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "APP_TITLE": "Quickstart",
+  "APP_TITLE": "sheTravel",
   "VERSION": "Version",
   "EXAMPLE_LOGIN_INFO": "Use this user and password for login",
   "USERNAME": "Username",
