--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -85,5 +85,8 @@
   "CONTACT": "Contacta con",
   "MESSAGE": "MENSAJE",
   "SEND": "Enviar",
-  "FILTERS_HOSTS": "Filtros de anfitriona"
+  "FILTERS_HOSTS": "Filtros de anfitriona",
+  "activity_name": "Actividad",
+  "Clear": "Limpiar",
+  "Filter": "Filtrar"
 }
