--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -56,6 +56,7 @@
   "ERROR_EMAIL_REQUIRED": "Email required",
   "RESERVATION_TAB": "RESERVATIONS",
   "SAVE": "Save",
+  "SAVEACT": "Save interests",
   "Baile": "Dance",
   "Senderismo": "Hiking",
   "Escalada": "Climbing",
@@ -81,7 +82,7 @@
   "Baloncesto": "Basketball",
   "Astronomía": "Astronomy",
   "ACTIVITIES": "INTERESTS",
-  "ACTSELECT": "Select your interests",
+  "ACTSELECT": "Select up to 5 interests",
   "CONTACT": "Contact",
   "MESSAGE": "MESSAGE",
   "SEND": "Send",
