--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -90,5 +90,6 @@
   "FILTERS_HOSTS": "Host filters",
   "activity_name": "Activity",
   "Clear": "Clear",
-  "Filter": "Filter"
+  "Filter": "Filter",
+  "DATE": "Date"
 }
