--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -94,5 +94,6 @@
   "SNACKTEXT": "Interests have been saved",
   "ONESENTENCE": "Define yourself in one sentence. (max. 250 characters)",
   "LONGDESC": "It's your time. Tell the travelers everything you like. (max. 500 characters)",
-  "DATE": "Date"
+  "DATE": "Date",
+  "STATUS_N": "Reservation status"
 }
