--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -91,6 +91,7 @@
   "activity_name": "Actividad",
   "Clear": "Limpiar",
   "Filter": "Filtrar",
+  "STATUS_N": "Estado de la reserva",
   "SNACKTEXT": "Intereses guardados",
   "ONESENTENCE": "Definete en una frase. (máx. 250 caracteres)",
   "LONGDESC": "Es tu momento. Cuéntale a las viajeras todo lo que te gusta. (máx. 500 caracteres)",
