--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -94,5 +94,6 @@
   "SNACKTEXT": "Intereses guardados",
   "ONESENTENCE": "Definete en una frase. (máx. 250 caracteres)",
   "LONGDESC": "Es tu momento. Cuéntale a las viajeras todo lo que te gusta. (máx. 500 caracteres)",
-  "DATE": "Fecha"
+  "DATE": "Fecha",
+  "BACKBTN": "Volver"
 }
