WIP Boton crear en registro
Boton crear añadido con metodo pero sin funcionalidad para guardar en BD.
Boton volver en registro.

--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -96,5 +96,7 @@
   "ONESENTENCE": "Definete en una frase. (máx. 250 caracteres)",
   "LONGDESC": "Es tu momento. Cuéntale a las viajeras todo lo que te gusta. (máx. 500 caracteres)",
   "DATE": "Fecha",
-  "BACKBTN": "Volver"
+  "BACKBTN": "Volver",
+  "EMAILCONT": "Email de contacto",
+  "CREATEBTN": "Crear"
 }
