WIP Boton crear en registro
- Funcionalidad OK
- Falta comprobación de campos OK para crear usuario

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -91,7 +91,8 @@
   "activity_name": "Activity",
   "Clear": "Clear",
   "Filter": "Filter",
-  "SNACKTEXT": "Interests have been saved",
+  "SNACKACTIVITIES": "Interests have been saved",
+  "SNACKREGISTER": "User created",
   "ONESENTENCE": "Define yourself in one sentence. (max. 250 characters)",
   "LONGDESC": "It's your time. Tell the travelers everything you like. (max. 500 characters)",
   "DATE": "Date",
