Traduccion tarjeta registro
- Añadidas traducciones al texto del formulario de registro

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -100,6 +100,9 @@
   "STATUS_N": "Reservation status",
   "EMAILCONT": "Contact email",
   "CREATEBTN": "Create",
-  "RESERV_DIALOG_MSG": "Set a date to meet the host and take a tour around her city"
+  "RESERV_DIALOG_MSG": "Set a date to meet the host and take a tour around her city",
+  "REGTEXT1": "Your journey starts here!",
+  "REGTEXT2": "Fill out the registration form",
+  "REGTEXT3": "and join the sheTravel Club"
 
 }
