--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -101,6 +101,8 @@
   "EMAILCONT": "Email de contacto",
   "CREATEBTN": "Crear",
   "RESERV_DIALOG_MSG": "Indica una fecha para conocer a la anfitriona y hacer un tour por su ciudad",
+  "ACCEPT": "Aceptar",
+  "REJECT": "Rechazar",
   "REGTEXT1": "Tu viaje empieza aquí!",
   "REGTEXT2": "Rellena el formulario de registro",
   "REGTEXT3": "y únete al club de sheTravel"
