--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -123,7 +123,10 @@
   "Reservation delete": "aún no ha contestado a tu petición. Estás a tiempo de cancelarla.",
   "Reservation rejected text": "no ha podido aceptar tu reserva. Pero hay muchas más anfitrionas y destinos en la web!",
   "Reservation accepted": "Tu reserva ha sido aceptada! Aquí tienes sus datos de contacto",
-  "Headline in communities": "¿Dónde quieres ir?"
+  "Headline in communities": "¿Dónde quieres ir?",
+  "Message from": "Mensaje de",
+  "Message to": "Mensaje para"
+
 
 
 
