--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -137,6 +137,7 @@
   "CHOOSEDESTINATIONMSSG": "Choose your destination",
   "YOUTAG": "(YOU)",
   "ACCEPTVISITOF?": "Do you accept the visit of",
+  "ACCEPTVISITOF2?": "If you do it, we send her your contact details.",
   "READMESSAGE": "See message"
 
 }
