--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -131,6 +131,7 @@
   "CHOOSEDESTINATIONMSSG": "Elige tu destino favorito",
   "YOUTAG": "(TÚ)",
   "ACCEPTVISITOF?": "¿Aceptas la reserva de",
+  "ACCEPTVISITOF2?": "Si lo haces, le enviaremos tus datos de contacto.",
   "ACCEPT_RES1":  "Has aceptado la reserva de" ,
   "ACCEPT_RES2": "y ya tiene tus datos de contacto!",
   "READMESSAGE": "Ver mensaje"
