traduccion all-cities

--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -134,7 +134,9 @@
   "ACCEPTVISITOF2?": "Si lo haces, le enviaremos tus datos de contacto.",
   "ACCEPT_RES1":  "Has aceptado la reserva de" ,
   "ACCEPT_RES2": "y ya tiene tus datos de contacto!",
-  "READMESSAGE": "Ver mensaje"
+  "READMESSAGE": "Ver mensaje",
+  "ALLCITIES": "Todas las ciudades"
+
 
 
 }
