--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -138,6 +138,7 @@
   "YOUTAG": "(YOU)",
   "ACCEPTVISITOF?": "Do you accept the visit of",
   "ACCEPTVISITOF2?": "If you do it, we send her your contact details.",
-  "READMESSAGE": "See message"
+  "READMESSAGE": "See message",
+  "ALLCITIES": "All cities"
 
 }
