--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -54,8 +54,7 @@
   "Register email": "Email de registro",
   "Confirm password": "Confirma la contraseña",
   "ERROR_EMAIL_REQUIRED": "Email requerido",
-  "RESERVATION_REDB_TAB": "RESERVAS RECIBIDAS",
-  "RESERVATION_SENT_TAB": "RESERVAS ENVIADAS",
+  "RESERVATION_TAB": "RESERVAS",
   "SAVE": "Guardar",
   "SAVEACT": "Guardar intereses",
   "Baile": "Baile",
