--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -34,6 +34,7 @@
   "HOST": "Anfitriona",
   "PROFILE": "Perfil",
   "AVATAR": "Subir foto de perfil",
+  "SHORTDESC": "Defínete en una frase",
   "ACTIVEHOST": "Disponible",
   "HOST_DATA": "TUS DATOS DE ANFITRIONA",
   "HOST_AVAILABLE": "MUÉSTRATE DISPONIBLE PARA LA VIAJERAS",
@@ -57,6 +58,7 @@
   "RESERVATION_TAB": "RESERVAS",
   "SAVE": "Guardar",
   "SAVEACT": "Guardar intereses",
+  "activities": "Intereses",
   "Baile": "Baile",
   "Senderismo": "Senderismo",
   "Escalada": "Escalada",
