Comentario contacto en ciudades

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -148,7 +148,7 @@
   "ALLCITIES": "All cities",
   "SHOWPROFILE": "Show Profile",
   "LABEL_INPUT_RESP": "Send a reply to",
-  "CANCEL_RESP": "Explain the reasons for your cancellation"
-  
+  "CANCEL_RESP": "Explain the reasons for your cancellation",
+  "CITIESMAIL": "Can't find your city? Contact us at ciudades@shetravel.com"
 
 }
