--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -145,6 +145,7 @@
   "SHOWPROFILE": "Ver perfil",
   "LABEL_INPUT_RESP":"Responde al mensaje de",
   "CANCEL_RESP": "Explica los motivos de tu cancelación.",
-  "CONTACTMSJ": "Escribe un mensaje a"
+  "CONTACTMSJ": "Escribe un mensaje a",
+  "CITIESMAIL": "No encuentras tu ciudad? Contacta con nosotras en ciudades@shetravel.com"
   
 }
