--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -150,5 +150,6 @@
   "LABEL_INPUT_RESP": "Send a reply to",
   "CANCEL_RESP": "Explain the reasons for your cancellation",
   "CITIESMAIL": "Can't find your city? Contact us at ciudades@shetravel.com",
-  "RESERVATION": "Reservations"
+  "RESERVATION": "Reservations",
+  "CONTACTMSJ": "Contact"
 }
