--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
   "ACTIVEHOST": "Available",
   "HOST_DATA": "YOUR DETAILS AS HOST",
   "HOST_AVAILABLE": "SHOW YOUR AVAILABILITY TO TRAVELERS",
+  "PROFILE_PHOTO": "PROFILE PHOTO",
   "PROFILE_DATA": "PROFILE DATA",
   "CONTACT_DATA": "CONTACT DATA",
   "REGISTER_DATA": "REGISTER DATA",
