--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -38,6 +38,7 @@
   "ACTIVEHOST": "Disponible",
   "HOST_DATA": "TUS DATOS DE ANFITRIONA",
   "HOST_AVAILABLE": "MUÉSTRATE DISPONIBLE PARA LA VIAJERAS",
+  "PROFILE_PHOTO": "FOTO DE PERFIL",
   "PROFILE_DATA": "DATOS DEL PERFIL",
   "CONTACT_DATA": "DATOS DE CONTACTO",
   "REGISTER_DATA": "DATOS DE REGISTRO",
