--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -94,7 +94,7 @@
   "CONTACT": "Contacta con",
   "MESSAGE": "MENSAJE",
   "SEND": "Enviar",
-  "FILTERS_HOSTS": "Filtros de anfitriona",
+  "FILTERS_HOSTS": "Encuentra una anfitriona",
   "activity_name": "Actividad",
   "Clear": "Limpiar",
   "Filter": "Filtrar",
