Traduccion nuevas actividades

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -65,30 +65,30 @@
   "SAVE": "Save",
   "SAVEACT": "Save interests",
   "activities": "Interests",
-  "Baile": "Dance",
+  "Exploración": "Exploration",
   "Senderismo": "Hiking",
-  "Escalada": "Climbing",
-  "Surf": "Surf",
+  "Museos": "Museums",
+  "Gastronomía": "Gastronomy",
   "Buceo": "Diving",
+  "Mochileo": "Backpacking",
   "Ciclismo": "Cycling",
-  "Pesca": "Fishing",
   "Yoga": "Yoga",
-  "Pintura": "Painting",
-  "Lectura": "Reading",
-  "Cocina": "Cooking",
-  "Jardinería": "Gardening",
-  "Natación": "Swiming",
-  "Netflix": "Netflix",
-  "Running": "Running",
+  "Vida Nocturna": "Nightlife",
+  "Arquitectura": "Architecture",
+  "Compras": "Shopping",
+  "Deporte": "Sports",
+  "Series": "TV Shows",
+  "Scaperoom": "Scaperoom",
+  "Playa": "Beach",
   "Teatro": "Theater",
-  "Escritura": "Writing",
-  "Canto": "Singing",
+  "Montaña": "Mountain",
+  "Historia": "History",
   "Videojuegos": "Videogames",
   "Música": "Music",
   "Fotografía": "Photography",
-  "Fútbol": "Soccer",
+  "Naturaleza": "Nature",
   "Baloncesto": "Basketball",
-  "Astronomía": "Astronomy",
+  "Acampada": "Camping",
   "ACTIVITIES": "INTERESTS",
   "ACTSELECT": "Select up to 5 interests",
   "CONTACT": "Contact",
