--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -65,30 +65,30 @@
   "SAVE": "Guardar",
   "SAVEACT": "Guardar intereses",
   "activities": "Intereses",
-  "Baile": "Baile",
+  "Exploración": "Exploración",
   "Senderismo": "Senderismo",
-  "Escalada": "Escalada",
-  "Surf": "Surf",
+  "Museos": "Museos",
+  "Gastronomía": "Gastronomía",
   "Buceo": "Buceo",
+  "Mochileo": "Mochileo",
   "Ciclismo": "Ciclismo",
-  "Pesca": "Pesca",
   "Yoga": "Yoga",
-  "Pintura": "Pintura",
-  "Lectura": "Lectura",
-  "Cocina": "Cocina",
-  "Jardinería": "Jardinería",
-  "Natación": "Natación",
-  "Netflix": "Netflix",
-  "Running": "Running",
+  "Vida Nocturna": "Vida Nocturna",
+  "Arquitectura": "Arquitectura",
+  "Compras": "Compras",
+  "Deporte": "Deporte",
+  "Series": "Series",
+  "Scaperoom": "Scaperoom",
+  "Playa": "Playa",
   "Teatro": "Teatro",
-  "Escritura": "Escritura",
-  "Canto": "Canto",
+  "Montaña": "Montaña",
+  "Historia": "Historia",
   "Videojuegos": "Videojuegos",
   "Música": "Música",
   "Fotografía": "Fotografía",
-  "Fútbol": "Fútbol",
+  "Naturaleza": "Naturaleza",
   "Baloncesto": "Baloncesto",
-  "Astronomía": "Astronomía",
+  "Acampada": "Acampada",
   "ACTIVITIES": "INTERESES",
   "ACTSELECT": "Selecciona hasta 5 intereses",
   "CONTACT": "Contacta con",
