--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -152,5 +152,9 @@
   "CANCEL_RESP": "Explain the reasons for your cancellation",
   "CITIESMAIL": "Can't find your city? Contact us at ciudades@shetravel.com",
   "RESERVATION": "Reservations",
-  "CONTACTMSJ": "Contact"
+  "CONTACTMSJ": "Contact",
+  "read_host": "Seen",
+  "reservation_start": "Date start",
+  "reservation_end": "Date end",
+  "read_traveler": "Seen"
 }
