--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -107,7 +107,7 @@
   "STATUS_N": "Reservation status",
   "EMAILCONT": "Contact email",
   "CREATEBTN": "Create",
-  "RESERV_DIALOG_MSG": "Set a date to meet the host and take a tour around her city",
+  "RESERV_DIALOG_MSG": "Tell your host the dates when you'll be at her city",
   "ACCEPT": "Accept",
   "REJECT": "Reject",
   "CANCELED": "Canceled",
@@ -156,5 +156,8 @@
   "read_host": "Seen",
   "reservation_start": "Date start",
   "reservation_end": "Date end",
-  "read_traveler": "Seen"
+  "read_traveler": "Seen",
+  "DATERANGE.APPLYLABEL": "Save",
+  "SHORDESC": "Talk about yourself briefly"
+
 }
