--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -155,7 +155,8 @@
   "read_traveler": "Leído",
   "Date range": "Fecha de inicio y fin",
   "DATERANGE.APPLYLABEL": "Guardar",
-  "SHORDESC": "Cuenta algo que te defina brevemente"
+  "SHORDESC": "Cuenta algo que te defina brevemente",
+  "MESSAGEMAX200CHA": "Escribe un mensaje de hasta 200 caracteres"
 
   
 }
